[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Chars/enemy-sprite01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=2]

[node name="Enemy" type="Node2D" groups=["Enemies"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Spawner" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
